# bridgeql

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING_DCO.md  LICENSE  Makefile  README.md  env.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-cd-pipeline.yml  lint-test-and-build-pipeline.yml
bridgeql/: __init__.py  bridge.py  models.py  query.py  types.py  urls.py  utils.py
bridgeql/django/: __init__.py  auth.py  bridge.py  configloader.py  exceptions.py  fields.py  helpers.py  model_meta.py  models.py  query.py  schema.py  settings.py  urls.py  views.py
bridgeql/templates/bridgeql/: index.html  schema.html
src/: README.md
tests/server/: machine_tests.json  manage.py
tests/server/machine/: apps.py  models.py  tests.py
tests/server/machine/management/commands/: create_test_data.py
tests/server/machine/migrations/: 0001_initial.py  0002_operatingsystem_license_key.py
tests/server/machine/tests/: __init__.py  test_api_reader.py  test_api_streamer.py  test_api_updater.py  test_api_writer.py  test_settings.py  test_views.py
tests/server/server/: __init__.py  asgi.py  auth.py  settings.py  urls.py  wsgi.py
