[metadata]
name = bridgeql
version = 0.1.0
author = Piyus Kumar
author_email = piyusk@vmware.com
description = Query language to bridge the gap between REST API and ORM capability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware/bridgeql
project_urls =
    Bug Tracker = https://github.com/vmware/bridgeql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src